--- a/userregistration/templates/registration.html
+++ b/userregistration/templates/registration.html
@@ -1,5 +1,6 @@
 {% block content %}
 <form action='' method="POST">
+{% csrf_token %}
     {{form}}
     <input type="submit" value="Sign Up">
 </form>
